# easydb

./: .gitignore  .project  Cargo.toml  README.md
src/: lib.rs  main.rs
src/util/: mod.rs
