[package]
name = "easydb"
version = "0.0.1"
authors = ["liming <liming@admaster.com.cn>"]

[dependencies]
rustc-serialize = "0.3.16"
regex = "0.1.41"
postgres = "0.11.3"
rand = "0.3.11"
log = "0.3.5"

easy_util = {git = "https://limitee:20131988lm@github.com/limitee/easy_util.git"}


